--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>MoneyMentor - Personal Finance Assistant</title>
     <meta name="description" content="MoneyMentor is your intelligent personal finance assistant that predicts inflation and helps plan investments to meet future goals" />
     <meta name="author" content="MoneyMentor" />
